public/assets/css/style.css
/* ... */
.burger:focus {
  outline: none; }

html {
  overflow-x: hidden; }

body {
  font-family: "Work Sans", sans-serif;
  font-weight: 400;
  font-size: 14px;
  overflow-x: hidden; }
  body:before {
    content: "";
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 9;
    background-color: rgba(0, 0, 0, 0.5);
    -webkit-transition: .3s all ease;
    -o-transition: .3s all ease;
    transition: .3s all ease;
    opacity: 0;
    visibility: hidden; }
  body.offcanvas-menu:before {
    opacity: 1;
    visibility: visible; }

h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, .logo {
  font-family: "Work Sans", sans-serif;
  color: #00204a; }

a {
  -webkit-transition: .3s all ease;
  -o-transition: .3s all ease;
  transition: .3s all ease;
  text-decoration: none; }

.form-control {
  font-size: 16px;
  height: 52px;
  padding-left: 15px;
  padding-right: 15px; }
  .form-control:hover, .form-control:active, .form-control:focus {
    outline: none;
    -webkit-box-shadow: none;
    box-shadow: none; }

textarea {
  height: auto !important; }

#overlayer {
  width: 100%;
  height: 100%;
  position: fixed;
  z-index: 7100;
  background: #fff;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0; }

.loader {
  z-index: 7700;
  position: fixed;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%); }

.menu-bg-wrap {
  background-color: #005555;
  padding: 20px 30px;
  position: relative;
  float: left;
  width: 100%;
  border-radius: 7px;
  -webkit-box-shadow: 0 15px 30px -15px rgba(0, 0, 0, 0.1);
  box-shadow: 0 15px 30px -15px rgba(0, 0, 0, 0.1); }

.hero {
  position: relative;
  background-size: cover;
  background-position: cnter center;
  background-repeat: no-repeat;
  background-color: #00204a; }
  .hero.overlay {
    position: relative; }
    .hero.overlay:before {
      background-color: rgba(0, 0, 0, 0.5);
      content: "";
      position: absolute;
      left: 0;
      right: 0;
      bottom: 0;
      top: 0;
      z-index: 1; }
  .hero, .hero > .container > .row {
    height: 50vh;
    min-height: 600px; }
  .hero.page-inner, .hero.page-inner > .container > .row {
    height: 70vh;
    min-height: 300px; }
  .hero > .container {
    position: relative;
    z-index: 2; }
  .hero .heading {
    color: #fff;
    font-size: clamp(1.5rem, 2.5vw, 2.5rem);
    margin-bottom: 30px;
    font-weight: 600; }
  .hero .lead {
    color: #fff;
    font-size: 14px;
    margin-bottom: 30px; }
  .hero .narrow-w {
    max-width: 600px;
    margin: 0 auto; }
  .hero .form-search .form-control {
    padding-top: 18px;
    padding-bottom: 18px;
    padding-left: 20px;
    padding-right: 20px;
    border: none;
    border-radius: 30px; }
    .hero .form-search .form-control:hover, .hero .form-search .form-control:focus {
      outline: none;
      -webkit-box-shadow: none;
      box-shadow: none; }
  .hero .form-search .form-control {
    margin-right: 10px; }
  .hero .form-search .btn {
    background-color: #005555;
    padding-left: 30px;
    padding-right: 30px;
    color: #fff; }
    .hero .form-search .btn:hover, .hero .form-search .btn:focus {
      outline: none;
      -webkit-box-shadow: none;
      box-shadow: none; }

.hero-slide {
  top: 0;
  position: absolute;
  left: 0;
  right: 0; }
  .hero-slide .img {
    height: 100vh;
    min-height: 600px;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center; }
    .hero-slide .img.overlay {
      position: relative; }
      .hero-slide .img.overlay:before {
        content: "";
        position: absolute;
        left: 0;
        right: 0;
        bottom: 0;
        top: 0;
        z-index: 1;
        background: rgba(34, 34, 34, 0.4); }

.section {
  padding-top: 4rem;
  padding-bottom: 4rem; }
  .section .heading {
    font-weight: 500; }
    @media (max-width: 767.98px) {
      .section .heading {
        font-size: 36px; } }

.testimonial blockquote {
  font-style: 18px;
  color: #000; }

.bg-image {
  background-size: cover;
  background-position: center center;
  background-repeat: no-repeat;
  background-attachment: fixed; }
  .bg-image.overlay {
    position: relative; }
    .bg-image.overlay:before {
      content: "";
      position: absolute;
      left: 0;
      right: 0;
      bottom: 0;
      top: 0;
      z-index: 1;
      background: rgba(34, 34, 34, 0.97); }
  .bg-image > .container, .bg-image .custom-box {
    position: relative;
    z-index: 2; }

.btn {
  text-decoration: none !important;
  border-radius: 30px;
  padding-top: 15px;
  padding-bottom: 15px;
  padding-left: 30px;
  padding-right: 30px;
  border-width: 2px;
  border-color: transparent;
  border: none !important;
  top: 0;
  position: relative;
  -webkit-transition: .3s all ease;
  -o-transition: .3s all ease;
  transition: .3s all ease; }
  .btn.btn-primary {
    background: #005555;
    color: #fff; }
  .btn:hover {
    top: -2px;
    -webkit-box-shadow: 0 15px 30px -10px rgba(0, 0, 0, 0.1);
    box-shadow: 0 15px 30px -10px rgba(0, 0, 0, 0.1); }

.hero-slider-wrap .tns-controls {
  position: absolute;
  z-index: 2; }
  .hero-slider-wrap .tns-controls button {
    background: none;
    border: none; }

.hero-slider-wrap .tns-nav {
  position: absolute;
  right: 20px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  z-index: 2; }
  .hero-slider-wrap .tns-nav button {
    background: none;
    border: none;
    display: block;
    margin: 2px;
    height: 15px; }
    .hero-slider-wrap .tns-nav button:active, .hero-slider-wrap .tns-nav button:focus {
      outline: none; }
/* ... */

